# CIFEseed

./: .clean_build.sh.swp  .gitignore  CMakeLists.txt  README.md  clean_build.sh  force_outputs.txt  moment_outputs.txt  plot_ja.py
bolting_cs225a/: mmp_panda.urdf  mmp_panda_tool_no_collision.urdf
bolting_one_arm_cs225a/: simviz.cpp  world.urdf
bolting_two_arms/: panda_arm_wrench.urdf
bolting_two_arms_gui/: .launch_gui.sh.swp  controller_gui.cpp  launch_gui.sh  simviz_gui.cpp
construction/: CMakeLists.txt  controller.cpp  controller_pickPlace.cpp  mmp_panda_tool_collision.urdf  panda_arm.urdf  panda_arm_drill.urdf  panda_arm_wrench.urdf  simviz.cpp  simvizCB.cpp  world.urdf
cs225a_bolting/: CMakeLists.txt
cs225a_bolting/one_arm_bolting/: CMakeLists.txt
gui-construction/: .launch_gui.sh.swl  .launch_gui.sh.swm  .launch_gui.sh.swo  .launch_gui.sh.swp  CMakeLists.txt  simviz_gui.cpp
gui_two_arms/: CMakeLists.txt
gui_weld/: .launch_gui.sh.swn  keys_gui.h  simviz_gui.cpp
joint/: CMakeLists.txt  controller.cpp  controller2.cpp  controller3.cpp  gui-construction.html  joint_robot.urdf  mmp_panda.urdf  mmp_panda2.urdf  panda_arm_drill.urdf  simviz.cpp  simviz2.cpp  world2.urdf
joint_autonomous/: CMakeLists.txt  controller.cpp  launch.sh
joint_haptics/: CMakeLists.txt  controller.cpp  simviz.cpp  world.urdf
model/Column1/: Column1.mtl
model/Drill2/: Drill2.mtl
model/Hiltidrill/: hiltidrill.mtl
model/Joint/: Joint.mtl
model/Joints2/: Joints2.mtl
model/Monkey_Wrench_v3/: 10299_Monkey-Wrench_v1_L3.mtl
model/Nobolt/: Nobolt.mtl
model/Wrench/: Wrench.mtl
model/cordless_drill/: 10108_Cordless Drill_v2_Iteration2.mtl
model/jointcart/: jointcart.mtl
model/jointcart2/: joint cart2.mtl  jointcart2_wheeled.mtl
model/jointcart_fetch/: FetchRobotPlatform.mtl  jointcart_fetch.mtl  jointcart_fetch2.mtl
model/mmp_panda_tall/meshes/: panda_base.mtl  weldingcart.mtl
model/weld/: temp4.mtl  wall_archive.mtl  weld.mtl
model/weldingcart/: weldingcart.mtl
model/weldtool/: weldtool.mtl
task_starter_code/: kuka_iiwa.urdf
weld/: CMakeLists.txt  controller267.cpp  controller4.cpp  controller_weld.cpp  dump.rdb  mmp_panda3.urdf  plot.py  plot3.py  plot_archive1.py  simviz3.cpp  simviz_weld.cpp  world3.urdf  world_weld.urdf
weld_gui/: .launch_gui.sh.swk  .launch_gui.sh.swp  CMakeLists.txt
weld_haptics/: CMakeLists.txt  controller_weld.cpp  launch.sh  mmp_panda_weld.urdf  panda_arm.urdf  plot.py  simviz_archive.cpp  simviz_weld.cpp  world_weld.urdf
